added styles to search input

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -12,9 +12,9 @@
 
 .searchBar {
   display: flex;
-  flex-flow: row wrap;
-  align-items: baseline;
-  justify-content: space-around;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: baseline;
 
   width: 100%;
 }
