--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,20 +1,16 @@
-.container {
-  text-align: center;
-}
-
-.header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.searchBar {
+.searchForm {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  justify-content: baseline;
+}
 
-  width: 100%;
+.resultsHeader {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: baseline;
+  justify-content: space-evenly;
+}
+
+button:hover {
+  cursor: pointer;
 }
